[package]
name = "poncho-raft"
version = "0.1.0"
authors = ["rigzba21"]
edition = "2018"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pickledb = "0.4.1"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
state = "0.4.2"